@@ -3235,3 +3235,6 @@ m4_include([build/ax_check_compile_flag.m4])
 m4_include([build/ax_gcc_func_attribute.m4])
 
 m4_include([build/php_cxx_compile_stdcxx.m4])
+
+dnl Load pkg-config macros
+m4_include([build/pkg.m4])
